--- a/TOOLS/CGI/lighttpd.conf
+++ b/TOOLS/CGI/lighttpd.conf
@@ -1,5 +1,6 @@
 server.document-root = "/root/backtest/TOOLS/CGI" 
-
+server.errorlog = "/var/log/lighttpd/lighttpd.error.log"
+accesslog.filename = "/var/log/lighttpd/lighttpd.access.log"
 server.port = 80
 
 mimetype.assign = (
