CGI scripts and files now use TICKER_STATE_PATH environment variable

--- a/TOOLS/CGI/lighttpd.conf
+++ b/TOOLS/CGI/lighttpd.conf
@@ -1,4 +1,4 @@
-server.document-root = "/root/backtest/TOOLS/CGI" 
+server.document-root = env.TICKER_STATE_PATH + "/CGI"
 server.errorlog = "/var/log/lighttpd/lighttpd.error.log"
 server.port = 80
 
