Use TICKER_TOOL_PATH for lighttpd config.

--- a/TOOLS/CGI/lighttpd.conf
+++ b/TOOLS/CGI/lighttpd.conf
@@ -1,4 +1,4 @@
-server.document-root = env.TICKER_STATE_PATH + "/CGI"
+server.document-root = env.TICKER_TOOL_PATH
 server.errorlog = "/var/log/lighttpd/lighttpd.error.log"
 server.port = 80
 
@@ -10,8 +10,9 @@ mimetype.assign = (
   ".png" => "image/png" 
 )
 
-server.modules = ( "mod_cgi", )
+server.modules = ( "mod_cgi", "mod_setenv" )
 
+setenv.add-environment = ("TICKER_STATE_PATH" => env.TICKER_STATE_PATH)
 static-file.exclude-extensions = (".conf", ".pl", ".cgi")
 index-file.names = ( "index.html", "index.php" )
 cgi.assign = ( ".pl" => "/usr/bin/perl",
