Tokyo cabinet binding now transliterates file names with slashes in them and uses TICKER_CAB_PATH if present.

--- a/TOOLS/CGI/lighttpd.conf
+++ b/TOOLS/CGI/lighttpd.conf
@@ -13,6 +13,7 @@ mimetype.assign = (
 server.modules = ( "mod_cgi", "mod_setenv" )
 
 setenv.add-environment = ("TICKER_STATE_PATH" => env.TICKER_STATE_PATH)
+setenv.add-environment = ("TICKER_CAB_PATH" => env.TICKER_CAB_PATH)
 static-file.exclude-extensions = (".conf", ".pl", ".cgi")
 index-file.names = ( "index.html", "index.php" )
 cgi.assign = ( ".pl" => "/usr/bin/perl",
